--- a/index.html
+++ b/index.html
@@ -1,33 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-<script src="aframe/aframe.min.js"></script>
-<title>Bandych RRWTS - Hello!</title>
-</head>
-<body>
-    <a-scene background="color: #afafaf">
-		
-		
-		<a-entity id="environment" environment="preset: forest; fog: NaN; seed: 8; skyType: gradient; skyColor: #24b59f; horizonColor: #eff9b7; lightPosition: -1.2 0.88 -0.55; ground: noise; groundYScale: 4.18; groundTexture: squares; groundColor: #937a24; groundColor2: #987d2e; dressing: trees; dressingAmount: 500; dressingColor: #888b1d; dressingScale: 1; dressingVariance: 10 10 10; gridColor: #c5a543">
-		<a-entity position="0 50 0" light="type: hemisphere; color: #91dacf; intensity: 0.6; groundColor: #937a24"></a-entity>
-		<a-entity position="-1.2 0.88 -0.55" light="intensity: 0.6; shadowCameraLeft: -10; shadowCameraBottom: -10; shadowCameraRight: 10; shadowCameraTop: 10"></a-entity>
-		<a-sky radius="200" theta-length="110" material="shader: standard; src: aframe/60089a083829d.jpg" geometry="" id="sky1"></a-sky></a-entity>
-		
-		<a-entity id="ground" geometry="height: 0.2; depth: 50; width: 50" material="src: Mars.jpg; color: #831b1b; metalness: 0.1; repeat: 50 20; roughness: 1; emissive: #0a0a0a"></a-entity>
-        <a-entity position="2 1 1"  text="anchor: left; value: RRWTS; width: 10; color: white"></a-entity>
-		<a-entity text="align: center; value: B.BANDYCH; width: 11 color:white" position="4.068 2.054 1.799" rotation="0 -29.626999999999995 0" id="class"></a-entity>
-		
-		<a-entity id="pointLight" light="type: point; intensity: 0.25" position="0 3 3"></a-entity>
-		
-		<!--CAMERA-->
-		<a-entity id="cameraWrapper" position="2 1.6 8">
-		<a-entity id="camera" camera="" look-controls="" wasd-controls="" position="" rotation="2.291831180523291 -0.3437746770784877 0" data-aframe-inspector-original-camera="">
-		<a-entity id="cursor" position="0 0 -2" geometry="primitive: ring; radiusOuter: 0.016; radiusInner: 0.01" material="color: #ff9; shader: flat; transparent: true; opacity: 0.5" scale="2 2 2" raycaster="">
-		</a-entity></a-entity></a-entity>
+  <head>
+    <meta charset="utf-8">
+    <title>Hello, WebVR! • A-Frame</title>
+    <meta name="description" content="Hello, WebVR! • A-Frame">
+    <script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
+  </head>
+  <body>
+    <a-scene background="color: #FAFAFA">
+      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
+      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
+      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
+      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
     </a-scene>
-	
-
-
-
-</body>
+  </body>
 </html>
