--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	 <a-entity id="ground" geometry="height: 0.2; depth: 50; width: 50" material="src: Mars.jpg; color: #831b1b; metalness: 0.1; repeat: 50 20; roughness: 1; emissive: #0a0a0a"></a-entity>
         <a-entity position="-0.12548 3 2"  text="anchor: left; value: RRWTS; width: 10; color: white"></a-entity>
 	<a-entity text="align: center; value: B.BANDYCH; width: 11 color:white" position="11.72368 2.054 4.85143" rotation="0 -48 0" id="class"></a-entity>
+	    <a-entity text="align: center; value: 23.01.2021; width: 11 color:white" position="-11.72368 2.054 4.85143" rotation="0 48 0" link="href: juggler/juggler.html" id="class"></a-entity>
 	    <a-entity geometry="primitive: triangle" link="href: juggler/juggler.html" position = " -4.454 2.684 5.843" color="white"></a-entity>
 	<a-entity id="pointLight" light="type: point; intensity: 0.25" position="0 3 3"></a-entity>	
 		
