--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<a-entity text="align: center; value: B.BANDYCH; width: 11 color:white" position="11.72368 3 4.85143" rotation="0 -48 0" id="class"></a-entity>
 	    <a-entity text="align: center; value: 23.01.2021; width: 11 color:white" position="-4.454 3 5.843" rotation="0 48 0"id="class2">
 	    
-		    <a-link  href="https://bbandych121819.github.io/projektrr/juggler/juggler.html" title="Juggler" </a-link>
+		    <a-link  href="https://bbandych121819.github.io/projektrr/juggler/juggler.html" title="Juggler" on="click"</a-link>
 	    </a-entity>
 	<a-entity id="pointLight" light="type: point; intensity: 0.25" position="0 3 3"></a-entity>	
 		
