--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	<a-entity position="-1.2 0.88 -0.55" light="intensity: 0.6; shadowCameraLeft: -10; shadowCameraBottom: -10; shadowCameraRight: 10; shadowCameraTop: 10"></a-entity>
 	<a-sky radius="200" theta-length="110" material="shader: standard; src: aframe/60089a083829d.jpg" geometry="" id="sky1"></a-sky></a-entity>
 	 <a-entity id="ground" geometry="height: 0.2; depth: 50; width: 50" material="src: Mars.jpg; color: #831b1b; metalness: 0.1; repeat: 50 20; roughness: 1; emissive: #0a0a0a"></a-entity>
-        <a-entity position="-0.12548 3 2"  text="anchor: left; value: RRWTS; width: 10; color: white"></a-entity>
+        <a-entity position="-0.12548 3 2"  text="anchor: left; value: RRWTS; width: 10; color: white">
+	    <a-link  position="0 -3 0" href="https://bbandych121819.github.io/projektrr/juggler/juggler.html" title="Juggler" on="click"</a-link></a-entity>
 	<a-entity text="align: center; value: B.BANDYCH; width: 11 color:white" position="11.72368 3 4.85143" rotation="0 -48 0" id="class"></a-entity>
 	    <a-entity text="align: center; value: 23.01.2021; width: 11 color:white" position="-4.454 3 5.843" rotation="0 48 0"id="class2">
 	    
