--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <a-scene background="color: #afafaf">
-                <a-entity id="cameraWrapper" position="2 1.6 8">
+                <a-entity id="cameraWrapper" position="2 2.5 8">
 		<a-entity id="camera" camera="" look-controls="" wasd-controls="" position="" rotation="2.291831180523291 -0.3437746770784877 0" data-aframe-inspector-original-camera="">
 		<a-entity id="cursor" position="0 0 -2" geometry="primitive: ring; radiusOuter: 0.016; radiusInner: 0.01" material="color: #ff9; shader: flat; transparent: true; opacity: 0.5" scale="2 2 2" raycaster="">
 		</a-entity></a-entity></a-entity>
@@ -17,12 +17,14 @@
 	<a-entity position="-1.2 0.88 -0.55" light="intensity: 0.6; shadowCameraLeft: -10; shadowCameraBottom: -10; shadowCameraRight: 10; shadowCameraTop: 10"></a-entity>
 	<a-sky radius="200" theta-length="110" material="shader: standard; src: aframe/60089a083829d.jpg" geometry="" id="sky1"></a-sky></a-entity>
 	 <a-entity id="ground" geometry="height: 0.2; depth: 50; width: 50" material="src: Mars.jpg; color: #831b1b; metalness: 0.1; repeat: 50 20; roughness: 1; emissive: #0a0a0a"></a-entity>
-        <a-entity position="-0.12548 3 2"  text="anchor: left; value: RRWTS; width: 10; color: white">
-	<a-entity text="align: center; value: B.BANDYCH; width: 11 color:white" position="11.72368 3 4.85143" rotation="0 -48 0" id="class"></a-entity>
-	 <a-entity text="align: center; value: 23.01.2021; width: 11 color:white" position="-4.454 3 5.843" rotation="0 48 0"id="class2">
-	     
+        <a-entity position="0 3 2"  text="anchor: left; value: RRWTS; width: 10; color: white">
+	<a-entity text="align: center; value: B.BANDYCH; width: 11 color:white" position="11 3 2" rotation="0 -48 0" id="class"></a-entity>
+	 <a-entity text="align: center; value: 23.01.2021; width: 11 color:white" position="-5 3 2" rotation="0 48 0"id="class2"
 	    </a-entity>
-	<a-entity id="pointLight" light="type: point; intensity: 0.25" position="0 3 3"></a-entity>	
+		<a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+        <a-entity id="ySphere" geometry="primitive: sphere" material="color: #ff0; roughness: 1" position="-2 2 -2"></a-entity>
+		</a-entity>
+	<a-entity id="pointLight" light="type: point; intensity: 0.3" position="0 3 3"></a-entity>	
 		
 		
     </a-scene>
