--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 	 <a-entity id="ySphere-2" geometry="primitive: sphere" material="color: #ff0; roughness: 1" position="4 3.3 1.30508">
 	</a-entity>
 	    
-	<a-sphere color="yellow" position="-2 3.3 1.3" animation="property: object3D.rotation.y; to: 360; loop: NaN; easing: linear; dur: 9600">
+	<a-sphere color="yellow" position="-2 3.3 1.3" animation="property: object3D.rotation.y; to: 360; loop: true; easing: linear; dur: 9600">
 	</a-sphere>
 			
-	<a-entity id="redBox" geometry="" material="color: #f00" position="-4 1 0" animation="property: object3D.rotation.y; to: 360; loop: NaN; easing: linear; dur: 9600"></a-entity>
+	<a-entity id="redBox" geometry="" material="color: #f00" position="-4 1 0" animation="property: object3D.rotation.y; to: 360; loop: true; easing: linear; dur: 9600">
+	   <a-entity> id="animation" animation="property: object3D.rotation.z; to: 360; loop: true; easing: linear; dur: 9600" </a-entity>
+	    </a-entity>
 	    
 	 <a-entity id="environment" environment="preset: forest; fog: NaN; seed: 8; skyType: gradient; skyColor: #24b59f; horizonColor: #eff9b7; lightPosition: -1.2 0.88 -0.55; ground: noise; groundYScale: 4.18; groundTexture: squares; groundColor: #937a24; groundColor2: #987d2e; dressing: trees; dressingAmount: 500; dressingColor: #888b1d; dressingScale: 1; dressingVariance: 10 10 10; gridColor: #c5a543">
 	<a-entity position="0 50 0" light="type: hemisphere; color: #91dacf; intensity: 0.6; groundColor: #937a24"></a-entity>
