--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	 <a-entity id="ySphere-2" geometry="primitive: sphere" material="color: #ff0; roughness: 1" position="4 3.3 1.3" >
 	</a-entity>
 	    
-	<a-sphere color="yellow" position="-2 3.3 1.3" a">
+	<a-sphere color="yellow" position="-2 3.3 1.3"">
 	</a-sphere>
 			
 
