--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<a-entity id="camera" camera="" look-controls="" wasd-controls="" position="" rotation="2.291831180523291 -0.3437746770784877 0" data-aframe-inspector-original-camera="">
 		<a-entity id="cursor" position="0 0 -2" geometry="primitive: ring; radiusOuter: 0.016; radiusInner: 0.01" material="color: #ff9; shader: flat; transparent: true; opacity: 0.5" scale="2 2 2" raycaster="">
 		</a-entity></a-entity></a-entity>
-	<a-entity id="redBox" geometry="" material="color: #f00" position="-4 1 0" animation="from:  #FDFBDA;  loop:  3;  property:  components.material.material.color;  startEvents:  pulse;  pauseEvents:  ;  resumeEvents:  ;  to:  #2D4659;  type:  color"></a-entity>
+	<a-entity id="redBox" position="5 5 5 geometry="primitive: box" material="color: #f00" position="-4 1 0" animation="from:  #FDFBDA;  loop:  3;  property:  components.material.material.color;  startEvents:  pulse;  pauseEvents:  ;  resumeEvents:  ;  to:  #2D4659;  type:  color"></a-entity>
 	    
 	 <a-entity id="ySphere-2" geometry="primitive: sphere" material="color: #ff0; roughness: 1" position="4 3.3 1.3" >
 	</a-entity>
