--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script src="aframe/aframe.min.js"></script>
+<script src="shader-grid-glitch.js"></script>
 <title>Bandych RRWTS - Hello!</title>
 </head>
 <body>
@@ -20,6 +21,24 @@
 			
 	<a-entity id="box1" position="10 2 2" material="src: TEX medium wood.jpg" geometry="" animation__rotate="dur: 2000; from: 0; loop: 100; property: object3D.rotation.y; to: 360"></a-entity>
 	<a-entity id="box1" position="-10 2 2" material="src: rock.jpg" geometry="" animation__rotate="dur: 20000; from: 0; loop: 100; property: object3D.rotation.z; to: 360"></a-entity>
+		
+	 <a-sphere material="shader:grid-glitch; color: red;"
+                radius="2"
+                position="0 2 15"
+				animation="property: object3D.rotation.y; to: 360; loop: true; easing: linear; dur: 9600">
+      </a-sphere>
+	  
+	   <a-sphere material="shader:grid-glitch; color: blue;"
+                radius="2"
+                position="0 4 15"
+				animation="property: object3D.rotation.z; to: 360; loop: true; easing: linear; dur: 9600">
+      </a-sphere>
+	   <a-sphere material="shader:grid-glitch; color: white;"
+                radius="2"
+                position="0 6 15"
+				">
+      </a-sphere>
+	
 	
 	 <a-entity id="environment" environment="preset: forest; fog: NaN; seed: 8; skyType: gradient; skyColor: #24b59f; horizonColor: #eff9b7; lightPosition: -1.2 0.88 -0.55; ground: noise; groundYScale: 4.18; groundTexture: squares; groundColor: #937a24; groundColor2: #987d2e; dressing: trees; dressingAmount: 500; dressingColor: #888b1d; dressingScale: 1; dressingVariance: 10 10 10; gridColor: #c5a543">
 	<a-entity position="0 50 0" light="type: hemisphere; color: #91dacf; intensity: 0.6; groundColor: #937a24"></a-entity>
